--- a/index.html
+++ b/index.html
@@ -14,12 +14,35 @@
 </head>
 
 <body>
-    <h1>Hello !!!!!!!!</h1>
-    <div ng-controller="BluetoothController as $ctrl">
-        {{$ctrl.status}}
-        <button type="button" class="btn btn-primary" ng-click="$ctrl.connect()">Scan</button>
-<div>{{$ctrl.datadenis}}</div>
+    <div class="container" ng-controller="BluetoothController as $ctrl">
+        <form>
+            <div class="form-group">
+                <h1>Bluetooth application</h1>
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" ng-click="$ctrl.connectDevice()">Scan</button>
+                <button type="button" class="btn btn-primary" ng-click="$ctrl.disconnectDevice()">Disconnect</button>
+            </div>
+            <div class="form-group">
+                <label><b>{{$ctrl.status}}</b></label>
+                <small id="emailHelp" class="form-text text-muted">This is the application status.</small>
+            </div>
+            <div class="form-group">
+                <label>Data received from device</label>
+                <input type="text" class="form-control" ng-model="$ctrl.pushedData" readonly>
+                <small id="emailHelp" class="form-text text-muted">A counter is pushed from the bluetooth device every second.</small>
+            </div>
+            <div class="form-group">
+                <label>Send text to the device</label>
+                <input type="text" class="form-control" ng-model="$ctrl.dataToWrite" />
+                <small id="emailHelp" class="form-text text-muted">Send a given text string and the device shall blink.</small>
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-primary" ng-click="$ctrl.send()">Send</button>
+            </div>
+        </form>
     </div>
+
 </body>
 
 </html>
