add new version from angular and material

--- a/legacy/index.html
+++ b/legacy/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Bluetooth ESP32 PWA</title>
 
-  <base href="/"/>
+  <base href="/legacy/"/>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
