--- a/protoglue/index.html
+++ b/protoglue/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ProtoglueFront</title>
-  <base href="/">
+  <base href="/protoglue/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,5 +15,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3bfd66addbd0d2814591.js"></script><script type="text/javascript" src="main.7b08d39866c00a0704a8.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3bfd66addbd0d2814591.js"></script><script type="text/javascript" src="main.2ca2147f56ac25635e0f.js"></script></body>
 </html>
