--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProtoglueFront</title>
+  <title>iCoffee</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,5 +15,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3bfd66addbd0d2814591.js"></script><script type="text/javascript" src="main.0adff1f355aaec902aad.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3bfd66addbd0d2814591.js"></script><script type="text/javascript" src="main.a938dbd398212b8bc2f7.js"></script></body>
 </html>
